# Mattermost-Printer-Bot

./: README.md  flake.nix  pyproject.toml
printer_bot/: __main__.py  plugin.py  utils.py
